--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
-VITE_API_BASE_URL=http://192.168.99.74:82/api/
-VITE_SOCKET_BASE_URL=http://192.168.99.74:82/
+VITE_API_BASE_URL=http://kt.dev.ragdalion.com/api/
+VITE_SOCKET_BASE_URL=http://kt.dev.ragdalion.com/
 VITE_PATH_PREFIX=/
 VITE_MOCK_API=false
-VITE_API_ASSET_URL=http://192.168.99.74:82/
+VITE_API_ASSET_URL=http://kt.dev.ragdalion.com/
