--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 VITE_API_BASE_URL=http://kt.dev.ragdalion.com/api/
 VITE_SOCKET_BASE_URL=http://kt.dev.ragdalion.com/
 VITE_PATH_PREFIX=/
-VITE_MOCK_API=false
+VITE_MOCK_API=true
 VITE_API_ASSET_URL=http://kt.dev.ragdalion.com/
